# pbt-playground

./: pbt-playground.cabal  stack.yaml
test/: GenerateAndSample.hs  RefiningGeneratedData.hs  SpecifyingLaws.hs  TestCaseDistributionShrinking.hs  Tests.hs
