name:                pbt-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pbt-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pbt-playground
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-modules:       GenerateAndSample
                     , SpecifyingLaws
                     , RefiningGeneratedData
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && <5
                     , QuickCheck >2.13
                     , test-invariant ==0.4.5.0
                     , quickcheck-instances
                     , generic-arbitrary ==0.1.0
                     , bytestring
                     , sandi
  default-language:    Haskell2010